# actix-rust-api-sample

./: .dockerignore  .editorconfig  .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  resources.sh  run-resources.sh
docker/: Dockerfile  init-user-db.sh
docker/database/: Dockerfile  init-db.sh
docker/redis/: Dockerfile  redis.conf
docker/server/: Dockerfile
docs/: Rust-Actix-Postgres.postman_collection.json  Rust-Actix-Rentals.postman_collection.json
migrations/2020-03-03-030153_create_user/: up.sql
migrations/2020-03-04-034239_create_rental/: down.sql  up.sql
migrations/2020-04-21-005225_create_user/: up.sql
postman/: Rust Web Api - Cloudmaker.postman_collection.json
script/: container-ip.sh
src/: api_error.rs  db.rs  main.rs  schema.rs
src/auth/: routes.rs
src/db/: mod.rs  pagination.rs
src/rental/: mod.rs  model.rs  route.rs
src/server/: api_error.rs  db.rs  mod.rs
src/user/: mod.rs  model.rs  route.rs  routes.rs
