[package]
name = "rust-actix-rentals"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
bigdecimal = { version = "0.1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
diesel_migrations = "1.4"
dotenv = "0.11"
env_logger = "0.6"
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
